<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".CompassActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/botGuide"
...
